WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118206
Cached pages don't update their backing scale factor when it changes
https://bugs.webkit.org/show_bug.cgi?id=118206
Summary
Cached pages don't update their backing scale factor when it changes
Beth Dakin
Reported
2013-06-28 15:07:52 PDT
Steps to reproduce: 1. Go to daringfireball.net on non-HiDPI display. 2. Click on any link on the page e.g. "Projects". 3. Move the window to HiDPI display. 4. Click the back button. <
rdar://problem/14261627
>
Attachments
Patch
(5.01 KB, patch)
2013-06-28 15:44 PDT
,
Beth Dakin
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2013-06-28 15:44:24 PDT
Created
attachment 205750
[details]
Patch
Tim Horton
Comment 2
2013-06-28 15:57:46 PDT
Comment on
attachment 205750
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=205750&action=review
> Source/WebCore/history/CachedPage.h:74 > + bool m_needsDeviceScaleChanged;
I don't really like the "needs XYZ changed" naming (it's really 'needs to *call* XYZChanged', or maybe needsDeviceScaleUpdate or something), but there's already one like that here :|
Beth Dakin
Comment 3
2013-06-28 16:13:02 PDT
Thanks, Tim! I gave it some thought but was unable to think of a better name. I do agree it's not great. I will keep thinking on it.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug