Cached pages don't update their backing scale factor when it changes https://bugs.webkit.org/show_bug.cgi?id=118206 -and- <rdar://problem/14261627>

Reviewed by Tim Horton.

It is not sufficient to mark pages in the PageCache as needing a full style
recalc. We also need to ensure that the RenderLayerCompositors for the CachesPages
get updated.

Keep track of whether device scale has been updated with
m_needsDeviceScaleChanged. If that has been marked true, then restore() will call
Frame::deviceOrPageScaleFactorChanged().
* history/CachedPage.cpp:
(WebCore::CachedPage::CachedPage):
(WebCore::CachedPage::restore):
* history/CachedPage.h:
(WebCore::CachedPage::markForDeviceScaleChanged):

Propagate markForDeviceScaleChanged() to all of the CachedPages.
* history/PageCache.cpp:
(WebCore::PageCache::markPagesForDeviceScaleChanged):
* history/PageCache.h:

Call PageCache::markPagesForDeviceScaleChanged()
* page/Page.cpp:
(WebCore::Page::setDeviceScaleFactor):



Canonical link: https://commits.webkit.org/136247@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152194 268f45cc-cd09-0410-ab3c-d52691b4dbfc