Source/WebCore/history/CachedPage.h
@@ -58,6 +58,10 @@ public:
     void markForCaptionPreferencesChanged() { m_needsCaptionPreferencesChanged = true; }
 #endif
 
+#if USE(ACCELERATED_COMPOSITING)
+    void markForDeviceScaleChanged() { m_needsDeviceScaleChanged = true; }
+#endif
+
 private:
     CachedPage(Page*);
 
@@ -67,6 +71,7 @@ private:
     bool m_needStyleRecalcForVisitedLinks;
     bool m_needsFullStyleRecalc;
     bool m_needsCaptionPreferencesChanged;
+    bool m_needsDeviceScaleChanged;
 };
 
 } // namespace WebCore
